<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_new"
        android:icon="@drawable/menu_new"
        android:title="@string/menu_new"/>
    <item
        android:id="@+id/menu_restore"
        android:icon="@drawable/menu_restore"
        android:title="@string/menu_restore"/>
    <item
        android:id="@+id/menu_backup"
        android:icon="@drawable/menu_backup"
        android:title="@string/menu_backup"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/menu_search"
        android:title="@string/menu_search"/>
    
    <item
        android:id="@+id/menu_pass"
        android:icon="@drawable/menu_video"
        android:title="@string/menu_pass"/>
    
    <item
        android:id="@+id/menu_pass_cancel"
        android:icon="@drawable/menu_video"
        android:title="@string/menu_pass_cancel"/>

</menu>