<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/SecondTextStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_entry_title" />

    <TextView
        android:id="@+id/detail_title"
        style="@style/PrimaryTextStyle"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/SecondTextStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_entry_date" />

    <TextView
        android:id="@+id/detail_date"
        style="@style/PrimaryTextStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/SecondTextStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_entry_emotion" />

    <ImageView
        android:id="@+id/emotion_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/detail_emotion_image_desc"
        android:layout_gravity="center_horizontal"/>

    <TextView
        style="@style/SecondTextStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_entry_content" />

    <EditText
        android:id="@+id/detail_content"
        style="@style/PrimaryTextStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:gravity="top"
        android:lines="5"
        android:editable="false" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="20dip"/>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/but_detail_sound"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:contentDescription="@string/detail_but_sound_desc"
            android:background="#7f000000"
            android:layout_weight="1"
            android:visibility="gone"
            android:src="@drawable/but_sound" />

        <ImageButton
            android:id="@+id/but_detail_video"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:contentDescription="@string/detail_but_video_desc"
            android:background="#7f000000"
            android:layout_weight="1"
            android:visibility="gone"
            android:src="@drawable/but_video" />

    </LinearLayout>

</LinearLayout>
