<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/t1"
        android:layout_width="fill_parent"
        android:layout_height="20dip" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/edit_entry_title"
            style="@style/SecondTextStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/entry_title" />

        <EditText
            android:id="@+id/entry_edit_title"
            style="@style/SecondTextStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:singleLine="true"
            android:hint="@string/entry_title_hint" />
    </LinearLayout>

    <TextView
        android:id="@+id/t2"
        android:layout_width="fill_parent"
        android:layout_height="20dip"
        android:layout_below="@+id/linear1" />

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t2"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/entry_text_emotion"
            style="@style/SecondTextStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/entry_emotion" />

        <RatingBar
            android:id="@+id/entry_ratingbar_emotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5" />
    </LinearLayout>

    <TextView
        android:id="@+id/t3"
        android:layout_width="fill_parent"
        android:layout_height="20dip"
        android:layout_below="@+id/linear2" />

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t3"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/entry_text_content"
            style="@style/SecondTextStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/entry_content" />

        <EditText
            android:id="@+id/entry_edit_content"
            style="@style/SecondTextStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="top"
            android:hint="@string/entry_content_hint"
            android:lines="5" />
    </LinearLayout>

    <TextView
        android:id="@+id/t4"
        android:layout_width="fill_parent"
        android:layout_height="20dip"
        android:layout_below="@+id/linear3" />

    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_below="@+id/t4"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/linear6"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/entry_but_sound"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#7f000000"
                android:contentDescription="@string/edit_but_sound_desc"
                android:src="@drawable/but_sound" />

            <TextView
                android:id="@+id/entry_but_sound_text"
                style="@style/SecondTextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/entry_but_sound_text_no" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear7"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/entry_but_video"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#7f000000"
                android:contentDescription="@string/edit_but_video_desc"
                android:src="@drawable/but_video" />
            <TextView
                android:id="@+id/entry_but_video_text"
                style="@style/SecondTextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/entry_but_video_text_no" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/t5"
        android:layout_width="fill_parent"
        android:layout_height="20dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linear4" />

    <LinearLayout
        android:id="@+id/linear5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t5"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/entry_but_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/entry_but_cancel" />

        <Button
            android:id="@+id/entry_but_save"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/entry_but_save" />
    </LinearLayout>

</RelativeLayout>